# Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  Engine.sln  Engine.vcxproj  Engine.vcxproj.filters  README.md  configure.bat  imgui.ini  vcpkg-configuration.json  vcpkg.json
Assets/: config.json
Assets/3D_Models/Sponza/: convert_spec_to_rough.py  sponza.mtl
Assets/scene/: only_skybox.json  sponza.json
Engine/: Engine.vcxproj  Engine.vcxproj.filters  imgui.ini
Engine/logged_files/: error.txt  model_loading.txt  shader_creation.txt  texture_loading.txt  window_creation.txt
Engine/res/: config.json
Engine/res/scene/: sponza.json  test1.json
Engine/src/: Defs.h  Scene3D.cpp  Scene3D.h  main.cpp  pch.h
Engine/src/graphics/: Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h  Window.cpp  Window.h  shader.cpp  shader.h
Engine/src/input/: InputManager.cpp  InputManager.h  JoystickManager.cpp  JoystickManager.h
Engine/src/scene/: Renderable3D.cpp  Renderable3D.h  RenderableModel.cpp  RenderableModel.h  Scene3D.cpp  Scene3D.h  SceneGraph.h  SceneNode.cpp  SceneNode.h
Engine/src/shaders/: basic.frag  basic.vert  directionalLight.frag  framebuffer.frag  framebufferColorBuffer.frag  lightprobe_convolution.frag  lightprobe_convolution.glsl  lightprobe_convolution.vert  model.frag  model.vert  modelReflection.frag  modelRefraciton.frag  multipleLight.frag  oldBasic.vert  oldModel.frag  pbr_model.frag  pbr_model.glsl  pbr_model.vert  postprocess.frag  postprocess.vert  prebrdf.frag  prebrdf.vert  reflectionprobe_importance_sampling.frag  reflectionprobe_importance_sampling.glsl  reflectionprobe_importance_sampling.vert  shadowmap.vert  skybox.frag  skybox.glsl  skybox.vert  terrain.frag  terrain.glsl
Engine/src/terrain/: Terrain.cpp  Terrain.h
Engine/src/thread/: thread_pool.cpp  thread_pool.h
Engine/src/ui/: DebugPane.cpp  DebugPane.h  Pane.cpp  Pane.h  RuntimePane.cpp  RuntimePane.h
Engine/src/utils/: FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  Singleton.h  Time.cpp  Time.h  Timer.cpp  Timer.h
Shaders/: lightprobe_convolution.glsl  prebrdf.glsl  reflectionprobe_importance_sampling.glsl  shadowmap.glsl  skybox.glsl
Shaders/deferred/: PBR_LightingPass.glsl  PBR_Model_GeometryPass.glsl  PBR_Terrain_GeometryPass.glsl
Shaders/fluid/: particle_draw.glsl
Shaders/forward/: pbr_model.glsl  pbr_terrain.glsl
Shaders/post_process/: copy.glsl  fxaa.glsl  gammaCorrect.glsl  ssao.glsl  ssao_blur.glsl
Source/: Defs.h  main.cpp  pch.h
Source/graphics/: Skybox.cpp  Skybox.h  UniformBufferData.h  UniformBufferManager.cpp  UniformBufferManager.h  Window.cpp  Window.h  shader.cpp  shader.h
Source/graphics/camera/: CubemapCamera.cpp  CubemapCamera.h  FPSCamera.cpp  FPSCamera.h
Source/graphics/dynamic lights/: DirectionalLight.cpp  DynamicLight.h  DynamicLightManager.cpp  SpotLight.h
Source/graphics/dynamic_lights/: DirectionalLight.cpp  DirectionalLight.h  DynamicLight.cpp  DynamicLight.h  DynamicLightManager.cpp  DynamicLightManager.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Source/graphics/ibl/: LightProbe.cpp  LightProbe.h  ProbeManager.cpp  ProbeManager.h  ReflectionProbe.cpp  ReflectionProbe.h
Source/graphics/mesh/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Source/graphics/renderer/: GLCache.h  MasterRenderer.cpp  MasterRenderer.h  ModelRenderer.cpp  ModelRenderer.h  RenderTarget.cpp  RenderTarget.h
Source/graphics/texture/: Cubemap.cpp  Cubemap.h  Texture.cpp  Texture.h
Source/input/: InputManager.cpp  InputManager.h  JoystickManager.cpp
Source/physics/fluid/: FluidSim.cpp  FluidSim.h  SPHKernel.cpp
Source/platform/OpenGL/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp
Source/rhi/: RHICommandBuffer.cpp  RHIFactory.cpp
Source/rhi/include/: ParallelRecorder.h  RHICommandBuffer.h  RHICommandQueue.h  RHIContext.h  RHIDevice.h  RHIHandle.h  RHIPlatform.h  RHIResources.h  RHIShaderCompiler.h  RHIShaderProgram.h  RHITypes.h
Source/rhi/null/: NullDevice.h  NullDeviceTest.cpp  NullShaderCompiler.h  NullShaderProgram.h
Source/scene/: Component.h  LightCollector.cpp  LightCollector.h  REFACTOR_PLAN.md  RenderScene.cpp  RenderScene.h  RenderableModel.cpp  RenderableModel.h  Scene3D.cpp  Scene3D.h  SceneLoader.cpp  SceneLoader.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h
Source/terrain/: Terrain.cpp  Terrain.h
Source/thread/: SpinLock.h  ThreadPool.cpp  ThreadPool.h  thread_pool.h
Source/ui/: DebugPane.cpp  DebugPane.h  RuntimePane.cpp
Source/utils/: DebugEvent.cpp  DebugEvent.h  FileUtils.cpp  Logger.cpp  Singleton.h  Time.cpp  Time.h  Timer.cpp  Timer.h  debug_macro.h
ports/compactnsearch/: portfile.cmake  vcpkg.json
(+195 files in other folders)
